--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 
-
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-    display: block;
+.login-logo {
+    width: 100px; /* Ajustez la largeur selon vos besoins */
+    height: auto; /* Maintient les proportions de l'image */
 }
+
 
 body {
     line-height: 1;
