--- a/style.css
+++ b/style.css
@@ -1,9 +1,7 @@
-
-.login-logo {
+.logo-login {
     width: 100px; /* Ajustez la largeur selon vos besoins */
     height: auto; /* Maintient les proportions de l'image */
 }
-
 
 body {
     line-height: 1;
@@ -36,19 +34,19 @@ table {
     box-sizing: border-box;
 }
 
-/* Flex classes */
-.flex-column {
+/* Classes Flex */
+.flex-colonne {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
 }
 
-.flex-align-content-center-ca {
+.centre-alignement {
     align-content: center;
 }
 
-/* Login & Account creation styling */
-.auth-container {
+/* Styles de connexion et de création de compte */
+.conteneur-auth {
     width: 100%;
     min-height: 100vh;
     display: flex;
@@ -75,26 +73,26 @@ table {
     justify-content: center;
 }
 
-.auth-text h1 {
+.texte-offre h1 {
     font-weight: bold;
     font-size: clamp(2rem, 5vw, 3.45rem);
     padding-bottom: 15px;
 }
 
-.auth-text h2 {
+.texte-offre h2 {
     font-size: clamp(1rem, 2.8vw, 1.5rem);
     color: #4F4F4F;
     padding-bottom: 15px;
 }
 
-.auth-input form {
+.entree-auth form {
     display: flex;
     gap: 0.8rem;
     flex-direction: column;
     max-width: 20rem;
 }
 
-.auth-input input[type="text"], .auth-input input[type="password"], .auth-input button {
+.entree-auth input[type="text"], .entree-auth input[type="password"], .entree-auth button {
     min-height: 1rem;
     background-color: white;
     box-sizing: border-box;
@@ -105,13 +103,13 @@ table {
     padding: 0 5% 0 5%;
 }
 
-.auth-input input[type=text], .auth-input input[type=password] {
+.entree-auth input[type=text], .entree-auth input[type=password] {
     font-size: clamp(0.8rem, 5vw, 1rem);
     color: #777777;
     border-width: 2px;
 }
 
-.auth-input button {
+.entree-auth button {
     margin-top: 0.9rem;
     background-color: black;
     color: white;
