--- a/V1/style.css
+++ b/V1/style.css
@@ -118,3 +118,15 @@ table {
     font-weight: bold;
     font-size: 1.56rem;
 }
+
+.offre-main-section{
+    display: flex;
+    justify-content: center;
+}
+
+.offre-sub-section{
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
