--- a/V1/style.css
+++ b/V1/style.css
@@ -7,6 +7,7 @@ body {
     line-height: 1;
     width: 100vw;
     font-family: Inter, sans-serif;
+    margin: 0;
 }
 
 ol, ul {
@@ -115,4 +116,100 @@ table {
     color: white;
     font-weight: bold;
     font-size: 1.56rem;
+}
+
+nav{
+    display:flex;
+    justify-content:space-between;
+}
+
+.navbar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+
+nav a {
+    color: #17255A;
+    text-decoration: none;
+    font-size: 18px;
+    padding: 10px 20px;
+    transition: background 0.3s, color 0.3s;
+}
+
+nav a:hover {
+    background: #17255A;
+    color: #f4f4f4;
+}
+
+#reconnect a {
+    color:black;
+    background-color: #D3D3D3;
+}
+
+#reconnect a:hover{
+    background: black;
+    color: white;
+}
+
+#wishlist-button a {
+    color:white;
+    background-color: #18206F;
+}
+
+#wishlist-button a:hover{
+    background: black;
+    color: white;
+}
+
+.main-section{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.header-section{
+    background-color: #777777;
+    background-image: url(backgroundOffre.png);
+    background-size: cover;
+    width: 100%;
+    padding-top: 10%;
+    padding-bottom: 10%;
+}
+.sub-section{
+    width: 80%;
+    background-color: white;
+    font-size: 1.3rem;
+}
+
+#login-form{
+    margin-bottom: 2em;
+}
+#input-recherche{
+    width: 15em;
+    height: 3em;
+    border-radius:5px;
+    padding-left: 1em;
+    font-size: 1rem;
+}
+
+#ville-select{
+    width: 12em;
+    height: 3em;
+    border-radius:5px;
+    padding-left: 1em;
+    font-size: 1rem;
+}
+
+#titre-offre{
+    color: white;
+    margin-left: 5rem;
+}
+.offre{
+    border: 2px solid black;
+    border-radius: 5px;
+    width: 50%;
+    padding-left: 1em;
+    font-size: 1rem;
 }
