--- a/public/assets/css/style-offres.css
+++ b/public/assets/css/style-offres.css
@@ -100,4 +100,20 @@ header img {
     width: 50%;
     padding-left: 1em;
     font-size: 1rem;
+    margin-bottom: 1rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+.offre a{
+    margin: 1rem;
+    padding: 1rem;
+    background-color: #17255A;
+    color: white;
+    height: 3rem;
+    border-radius: 0.3rem;
+}
+
+.offre a:hover{
+    background-color: #0959ee;
 }
