--- a/public/assets/css/style-base.css
+++ b/public/assets/css/style-base.css
@@ -41,9 +41,102 @@ table {
     align-content: center;
 }
 
+.logo-login {
+    width: 100px; /* Ajustez la largeur selon vos besoins */
+    height: auto; /* Maintient les proportions de l'image */
+  }
+
+header {
+    display: flex;
+    justify-content: center;
+}
+
+nav {
+    width: 75%;
+    height: 4rem;
+    display:flex;
+    justify-content:space-between;
+}
+
+.navbar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+nav a {
+    color: #17255A;
+    text-decoration: none;
+    font-size: 18px;
+    padding: 0.9rem;
+    transition: background 0.3s, color 0.3s;
+    border-radius: 2rem;
+}
+
+nav a:hover {
+    background: #17255A;
+    color: #f4f4f4;
+}
+
+header img {
+    width: 90%;  /* Le logo prend toute la largeur du header */
+    height: 90%; /* Le logo prend toute la hauteur */
+    object-fit: contain; /* Garde les proportions sans déformation */
+}
+
+#profil-menu img {
+    width: 80%;
+    height: 80%;
+}
+
+#logo p {
+    color: #17255A; 
+    padding-left: 1rem;
+    font-size: x-large;
+}
+
+#profil-menu{
+    padding-right: 2rem;
+}
+
 footer {
     background-color: #18206F;
     color: white;
     text-align: center;
     padding: 10px 0;
+}
+
+/* Main Layout */
+.main-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #f5f5f5;
+    flex: 1;
+}
+
+.header-section {
+    background-color: #777777;
+    background-image: url('https://images.unsplash.com/photo-1523050854058-8df90110c9f1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80');
+    background-size: cover;
+    width: 100%;
+    padding-top: 5%;
+    padding-bottom: 5%;
+}
+
+.sub-section {
+    width: 80%;
+    background-color: white;
+    padding: 2rem;
+    margin-top: -2rem;
+    border-radius: 8px 8px 0 0;
+    box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.1);
+    margin-bottom: 2rem;
+}
+
+#titre-offre {
+    color: white;
+    margin-left: 10%;
+    font-size: 2.5rem;
 }
