--- a/resources/css/style-liste.css
+++ b/resources/css/style-liste.css
@@ -44,19 +44,21 @@
 .element-liste {
     background-color: white;
     border-radius: 12px;
-    padding: 20px;
+    padding-left: 20px;
+    padding-bottom: 20px;
     transition: transform 0.3s;
     border: 0.1rem solid;
     margin-top: 1rem;
 }
 
 .element-liste p {
-    margin: 0;
-    padding: 5px 0;
-    font-size: 1.1rem;
+    margin-top:0;
+    margin-bottom: 0.7rem;
 }
 
 .element-liste p:first-child {
+    margin-top:1rem;
+    margin-bottom: 1rem;
     font-size: 1.3rem;
     font-weight: bold;
     color: #333;
@@ -65,21 +67,21 @@
 .boutons-element{
     display:flex;
     justify-content: left;
+    align-items: center;
 }
 
 .boutons-element a{
-    padding:0.8rem;
+    font-size: 1.1rem;
+    padding:0.7rem;
     background-color: #17255A;
     border-radius:0.3rem;
-    margin-right: 0.5rem;
-    margin-top: 0.5rem;
+    margin-right: 0.7rem;
     color: white;
 }
 #supprimer {
-    padding: 0.8rem 1.2rem;
+    padding: 0.5rem;
     color: white;
     margin-right: 0.5rem;
-    margin-top: 0.5rem;
     border-radius: 0.3rem;
     font-size: 1.1rem;
     background-color: #bf0909;
