--- a/resources/css/style-login.css
+++ b/resources/css/style-login.css
@@ -64,3 +64,24 @@
     width: 100px;
     height: auto;
 }
+button {
+  background-color: #007bff; /* Bleu */
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s, transform 0.2s, box-shadow 0.3s;
+}
+
+button:hover {
+  background-color: #0056b3; /* Bleu plus foncé */
+  transform: scale(1.05);
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+button:active {
+  transform: scale(0.98);
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+}
