--- a/resources/css/style-base.css
+++ b/resources/css/style-base.css
@@ -173,3 +173,37 @@ footer {
     margin-left: 10%;
     font-size: 2.5rem;
 }
+.burger-menu {
+    display: none;
+    background: none;
+    border: none;
+    font-size: 2rem;
+    cursor: pointer;
+}
+
+.menu {
+    display: flex;
+    gap: 1rem;
+}
+
+@media (max-width: 1000px) {
+    .burger-menu {
+        display: block;
+    }
+
+    .menu {
+        display: none;
+        flex-direction: column;
+        position: absolute;
+        top: 4rem;
+        left: 0;
+        background-color: white;
+        width: 100%;
+        padding: 1rem;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    .menu.active {
+        display: flex;
+    }
+}
