--- a/resources/css/style-focus.css
+++ b/resources/css/style-focus.css
@@ -88,3 +88,35 @@
 .content .section p strong {
     color: #1f2937;
 }
+
+.button-offre{
+    display:flex;
+    justify-content: left;
+    align-items: center;
+}
+
+.button-offre a {
+    font-size: 1.1rem;
+    padding: 0.7rem;
+    margin-right: 1rem;
+    background-color: #17255a;
+    border-radius: 0.3rem;
+    color: white;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+}
+
+.button-offre a:hover {
+    background-color: #1e40af;
+}
+
+.bouton-wishlist {
+    border:0;
+    font-size: 1.1rem;
+    padding: 0.6rem;
+    background-color: #45a049;
+    border-radius: 0.3rem;
+    color: white;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+}
